Fixing alignment issue with navbar list item links

--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -22,7 +22,7 @@ nav.navbar-inverse .navbar-nav li > a {
   letter-spacing: 0;
   line-height: 46px;
   margin: 0 0.5rem;
-  padding: 0 1rem 0 0;
+  padding: 0 0.5rem 0;
   text-shadow: none;
   transition: all 0.3s ease-out;
   -webkit-font-smoothing: antialiased;
